--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE>
 <html>
-<head></title>20210815</title></head>
+<head><title>20210815</title></head>
 <body>
 <h1>vocabulary  cess cessation access excess process recess economic recession success
 </h1>
