--- a/index.html
+++ b/index.html
@@ -6,5 +6,23 @@
 </h1>
   <h2>vocabulary accessary accessory accession excessive processor incessant accessary accessory accession processor incessant</h2>
   <h3>tribute at distribute contribute towards among into to to ficient de ef pro suf ficient deficient efficient proficient sufficient tomake to give con distribute contribute tribute attribute attribute tribute distribute cont</h3>
+  <p>log data dia mono pro epi ue ic catalogue to describe things dialogue monologue prologue epilogue logic al word attendant extensible intension superintend tender tendon </p>
+  <p></p>
+ 
+   <p>deficient efficient proficient sufficient tend to stretch at in ex pre con dis por sub attend tend intend extend </p>
+   <p>foreskin foreword foreground prospets the future a perspective background forefinger the index finger the first finger</p>
+   <p>forefinger the index finger the first finger forefront the most ahead foregift deposit a cash pledge a rent deposit foredoom destine doom fate forewarn </p>
+   <p>vocabulary  foregoer forward  foregoer sume to take as con pre re sume sumption supptive assume assume assumption assumptive</p>
+   <p>sacred saint sacrifice sacrifice fly sacrifical sacrificially sacral sacrament sacramental sacrarium sacred sacredness sacrilege sacrilegious sacrilegiously sacrilegiousness sacrosanct sacrosanctity</p>
+   <p>san e sanity san ative atory atorium san itary san sane sanitorium whole</p>
+   <p></p>
+   <p></p>
+   <p></p>
+   <p></p>
+   <p></p>
+   <p></p>
+  
+  
+  
   </body>
 </html>
