--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
    <p>vocabulary  foregoer forward  foregoer sume to take as con pre re sume sumption supptive assume assume assumption assumptive</p>
    <p>sacred saint sacrifice sacrifice fly sacrifical sacrificially sacral sacrament sacramental sacrarium sacred sacredness sacrilege sacrilegious sacrilegiously sacrilegiousness sacrosanct sacrosanctity</p>
    <p>san e sanity san ative atory atorium san itary san sane sanitorium whole</p>
-   <p></p>
-   <p></p>
-   <p></p>
+   <p>sane sanity sanative sanatory sanatorium sanitary tempt try attempt contempt</p>
+   <p>valu worth de valuate valuation devaluate valuation devaluate devaluation evaluate evaluation vocabulary value invaluable </p>
+   <p>sance ify ification ionative ity uarize uary um sanctity sanctification sanctity sanctuary sacred um uary uarize ity ionative ification ify </p>
    <p></p>
    <p></p>
    <p></p>
