--- a/index.html
+++ b/index.html
@@ -18,9 +18,28 @@
    <p>sane sanity sanative sanatory sanatorium sanitary tempt try attempt contempt</p>
    <p>valu worth de valuate valuation devaluate valuation devaluate devaluation evaluate evaluation vocabulary value invaluable </p>
    <p>sance ify ification ionative ity uarize uary um sanctity sanctification sanctity sanctuary sacred um uary uarize ity ionative ification ify </p>
+   <p>sanctify sacralize sanctification sanction sanctionative sanctity sanctitude sanctuarize sanctuary sanctum</p>
+   <p>tort twist tortion dis con ex re retort contort contortion distort distortion extort</p>
+   <p>extortion retort retortion torture torment tortoise  crimin dis in re crime to differ criminate crimination criminate descriminate criminate crimination </p>
+     <p>descriminate from between against in favor of  discrimination incriminate incriminate incrimination recriminate recrimination</p>
+   <p>extortion retort retorion torture toment tortoise crminating criminative criminative criminatorty criminal criminality discriminant discriminating discriminative </p>
+   <p>discriminatory incriminatory recriminative recriminatory criminal flat to blow  flat deflate inflate </p>
+     <p>flat flat tire deflate deflation inflatewith inflation reflate reflate reflation flatten flatter about on flatten flatter flatulent</p>
+   <p>deflated deflator deflationary inflatee inflationary inflationist inflationism inflatable inflator reflationary flatulent deflated inflator</p>
+   <p>termin end do prede ex terminate termination terminate termination determinate determination predeterminate predetermination exterminate extermination </p>
+     <p> vocabulary terminal interminable lude al col de e inter pre post allude collude   lude to play </p>
+   <p>delude postlude allude collude delude elude interlude prelude postlude  trude to thrust to push abtrude extrude intrude </p>
+   <p>protrude delude postlude allude collude delude elude interlude prelude postlude </p>
+     <p>rect cor di indi e rect rection correct direct erect erection rectly ob ex in pro trusion obrusion extrusion intrusion protrusion obtrusive </p>
+   <p>extrusive intrusive protrusive rect  rection correct direct erect erection rectoify</p>
+   <p>correct correction direct direction indirect indirection erect erection rectify rectification</p>
+     <p>rectitude rectum rectitude rectumbene good well bene factor benefit beneficial beneficent beneficence beneficiary benevolent benefactor</p>
    <p></p>
    <p></p>
+     <p></p>
    <p></p>
+   <p></p>
+  
   
   
   
