--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
    <p>extrusive intrusive protrusive rect  rection correct direct erect erection rectoify</p>
    <p>correct correction direct direction indirect indirection erect erection rectify rectification</p>
      <p>rectitude rectum rectitude rectumbene good well bene factor benefit beneficial beneficent beneficence beneficiary benevolent benefactor</p>
-   <p></p>
-   <p></p>
-     <p></p>
-   <p></p>
-   <p></p>
+   <p>benign malefactor forearm foreman forebear forebearforespeak time thought sight shadow cast tell speak know going go bear man tooth head arm beforevocabulary benign malefactor </p>
+   <p>forearm forehead foretooth foreman suppervisor overseer boss forebear forego abandon give up forefather foregoer ancestor  foreknow</p>
+     <p> foresee foreknowledge foreseeable forespeak foretell forecast er foretell forecast foreshadow foretell foresight forethought fotetime</p>
+   <p>fore skin word ground finger front gift doom warm ver foreskin forewarn </p>
+   <p>verse turn a ad con dis per re trans tra uni averse adverse converse assent consent dissent resent present absent sentence sentiment sentimental </p>
   
   
   
